<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#F5F5F5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back_icon"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="42dp"/>

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:text="@string/login"
            android:fontFamily="@font/inriasans_regular"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/login_back_button"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="22dp"/>

        <EditText
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:id="@+id/email_edttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:fontFamily="@font/inriasans_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_style_white_smaller"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>

        <EditText
            android:autofillHints="password"
            android:inputType="textPassword"
            android:id="@+id/password_edttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:fontFamily="@font/inriasans_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_style_white_smaller"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/email_edttxt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/inter_semi_bold"
            android:background="@drawable/button_style_black"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/password_edttxt"
            android:layout_marginTop="380dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="54dp"
            android:paddingEnd="54dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_you_agree_to_terms_of_service_and_privacy_policy"
            android:fontFamily="@font/inter_medium"
            android:textSize="11sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_btn"
            android:layout_marginTop="24dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>