<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="#F5F5F5"
    android:scrollbars="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back_icon"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="42dp"/>

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:text="@string/register"
            android:fontFamily="@font/inriasans_regular"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/registration_back_button"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="22dp"/>

        <EditText
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/black"
            android:fontFamily="@font/inriasans_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_style_white_smaller"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/register_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>

        <EditText
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:fontFamily="@font/inriasans_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_style_white_smaller"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/full_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:autofillHints="phone"
            android:inputType="phone"
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/number"
            android:textColorHint="@color/black"
            android:fontFamily="@font/inriasans_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_style_white_smaller"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/company_name"
            android:textColorHint="@color/black"
            android:fontFamily="@font/inriasans_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_style_white_smaller"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/number"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconTint="@color/black"
            app:endIconDrawable="@drawable/ic_down_arrow"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:background="#F5F5F5"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2.5dp"
            android:id="@+id/outbox_department_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/company_name"
            android:layout_marginTop="16dp">


            <AutoCompleteTextView
                android:background="@color/black"
                android:id="@+id/autocomplete_department_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/department_field"
                android:fontFamily="@font/inriasans_regular"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingTop="14dp"
                android:padding="12dp"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/annual_turnover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/annual_turnover"
            android:textColorHint="@color/black"
            android:fontFamily="@font/inriasans_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_style_white_smaller"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/outbox_department_field"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:importantForAutofill="no"
            android:inputType="text"
            android:id="@+id/pricing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/black"
            android:fontFamily="@font/inriasans_regular"
            android:textSize="16sp"
            android:background="@drawable/edittext_style_white_smaller"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/register_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconTint="@color/black"
            app:endIconDrawable="@drawable/ic_down_arrow"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:background="#F5F5F5"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2.5dp"
            android:id="@+id/outbox_pricing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/annual_turnover"
            android:layout_marginTop="16dp">

            <AutoCompleteTextView
                android:background="@color/black"
                android:id="@+id/autocomplete_pricing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rs_9_999_yearly_including_gst"
                android:fontFamily="@font/inriasans_regular"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingTop="14dp"
                android:padding="12dp"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceed_to_pay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed_to_pay"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/inter_semi_bold"
            android:background="@drawable/button_style_black"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/outbox_pricing"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="54dp"
            android:paddingEnd="54dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_you_agree_to_terms_of_service_and_privacy_policy"
            android:fontFamily="@font/inter_medium"
            android:textSize="11sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/proceed_to_pay_btn"
            android:layout_marginTop="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>