<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".LandingPage"
    android:scrollbars="horizontal">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="48dp">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="100dp"
            android:importantForAccessibility="no"
            android:src="@drawable/iea_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/landing_page_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_medium"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/explore_us_amp_explore_solutions_for_your_industrial_problems"
            android:textAlignment="center"
            android:textColor="#212121"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splash_logo" />

        <ImageView
            android:id="@+id/home_background_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.2"
            android:importantForAccessibility="no"
            android:scaleType="fitStart"
            android:src="@drawable/home_background_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/landing_page_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/explore_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_black"
            android:fontFamily="@font/inter_semi_bold"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:text="@string/explore_us"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_background_img" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/request_for_membership_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_black_smaller"
            android:fontFamily="@font/inter_semi_bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/request_for_membership"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explore_btn"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/existing_member_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_white_smaller"
            android:fontFamily="@font/inter_semi_bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/existing_member"
            android:textAllCaps="false"
            android:textColor="#151515"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explore_btn"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>