<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="#F5F5F5"
    android:scrollbars="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/payment_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back_icon"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="42dp"/>

        <TextView
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inriasans_regular"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@id/payment_back_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            app:endIconTint="@color/black"
            app:endIconDrawable="@drawable/ic_down_arrow"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:background="#F5F5F5"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2.5dp"
            android:id="@+id/outbox_pricing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/payment_back_button"
            android:layout_marginTop="60dp">

            <AutoCompleteTextView
                android:background="@color/black"
                android:id="@+id/autocomplete_pricing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rs_9_999_yearly_including_gst"
                android:fontFamily="@font/inriasans_regular"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingTop="14dp"
                android:padding="12dp"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconTint="@color/black"
            app:endIconDrawable="@drawable/ic_down_arrow"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:background="#F5F5F5"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2.5dp"
            android:id="@+id/outbox_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/outbox_pricing"
            android:layout_marginTop="30dp">

            <AutoCompleteTextView
                android:id="@+id/autocomplete_payment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:fontFamily="@font/inriasans_regular"
                android:inputType="none"
                android:padding="12dp"
                android:paddingTop="14dp"
                android:text="@string/payment_method"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/paynow_btn"
            android:layout_width="240dp"
            android:layout_height="51dp"
            android:layout_marginTop="310dp"
            android:background="@drawable/button_style_black"
            android:fontFamily="@font/inter_semi_bold"
            android:paddingStart="54dp"
            android:paddingEnd="54dp"
            android:text="@string/pay_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outbox_payment" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>